fixed the scroll on ios devices

--- a/src/styles/read.less
+++ b/src/styles/read.less
@@ -6,7 +6,7 @@
     width: 100vw;
     top: 0px;
   }
-  
+
   .head-font-base{
     font-size: 0.95rem;
     color: white;
@@ -90,6 +90,7 @@
     min-height: 100vh;
     height: 100vh;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch
   }
   .control{
     font-size: 1.0rem;
